# ursula

./: .gitignore  CMakeLists.txt  README.md  logbook.txt  package.xml
arduino/: motorcontrol.ino
config/: controller_teleop.yaml  nav2_params.yaml  ps4_teleop.yaml  serial_bridge_params.yaml  slam_toolbox_localization.yaml  slam_toolbox_params.yaml
launch/: camera.launch.py  dev_hardware_launch.launch.py  gazebo_sim_launch.launch.py  jetson_hardware_launch.launch.py  jetson_rtabmap.launch.py  laptop_slam_test_launch.launch.py  nav2_launch.launch.py  robot_launch.launch.py  sim_teleop_launch.launch.py
networking/: fastdds_super_client.xml
scripts/: detection_visualiser.py  serial_command_bridge.py  ursula_webpanel.py
urdf/: gazebo_plugins.xacro  lidar.xacro  oak_d.xacro  ursula.urdf.xacro
